--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="demoStyle">
-        <item name="android:textColor">#ffff0000</item>
-        <item name="android:background">#ff0000ff</item>
+        <item name="android:textColor">@color/purple_500</item>
+        <item name="android:background">@color/white</item>
         <item name="android:textSize">24sp</item>
-        <item name="android:gravity">center</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:gravity">left</item>
+        <item name="android:layout_margin">15dp</item>
     </style>
 </resources>
